crux-mir/test/symb_eval/sym_bytes/construct.good
test construct/<DISAMB>::crux_test[0]: returned Symbolic BV, FAILED

failures:

---- construct/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:41:9: 41:79 !test/symb_eval/sym_bytes/construct.rs:13:5: 13:35: error: in construct/<DISAMB>::crux_test[0]
[Crux]   MIR assertion at test/symb_eval/sym_bytes/construct.rs:13:5:
[Crux]   	sym2[0] == 0

[Crux] Overall status: Invalid.
